--- a/producto.html
+++ b/producto.html
@@ -31,7 +31,28 @@
 
     <!-- aqui los productos -->
     <main class="contenedor">
-        <h1>Producto</h1>
+        <h1>React JS</h1>
+        <div class="camisa">
+            <img src="img/3.jpg" alt="Imagen del producto">
+            <div class="camisa__contenido">
+                <p>
+                    Aenean eleifend maximus felis, vitae iaculis diam cursus aliquam. Etiam metus libero, cursus vitae posuere sit amet,
+                    congue eget quam. Morbi facilisis sapien quis elit sodales aliquet. Ut at nisi leo. Donec dictum elit vel vestibulum
+                    pretium.
+                </p>
+
+                <form class="formulario">
+                    <select class="formulario__campo">
+                        <option disabled selected>Seleccionar Talla</option>
+                        <option>Chica</option>
+                        <option>Mediana</option>
+                        <option>Grande</option>
+                    </select>
+                    <input class="formulario__campo" type="number" placeholder="cantidad" min="1">
+                    <input class="formulario__submit" type="submit" value="Agregar Al Carrito">
+                </form>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
