--- a/nosotros.html
+++ b/nosotros.html
@@ -31,8 +31,59 @@
 
     <!-- aqui los productos -->
     <main class="contenedor">
-        <h1>Nosotros</h1>
+        <h1>Sobre nosotros</h1>
+
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+                <p>
+                    Aenean eleifend maximus felis, vitae iaculis diam cursus aliquam. Etiam metus libero, cursus vitae posuere sit amet,
+                    congue eget quam. Morbi facilisis sapien quis elit sodales aliquet. Ut at nisi leo. Donec dictum elit vel vestibulum
+                    pretium. Aliquam erat volutpat. Sed vitae bibendum odio. Suspendisse eu turpis ullamcorper, efficitur leo non, porttitor
+                    enim. Praesent libero turpis, sagittis nec nisl id, ornare facilisis urna. Sed facilisis venenatis mi, eget mollis mi
+                    sagittis sit amet. 
+                </p>
+                <p>
+                    In quis nisl dolor. Suspendisse quis mattis arcu, vitae viverra tellus. Cras ac urna imperdiet, vulputate libero vel,
+                    porttitor est. Phasellus ullamcorper condimentum risus nec porta. Cras suscipit orci turpis, eget egestas turpis
+                    accumsan id. 
+                </p>    
+            </div>
+
+            <img class="nosotros__imagen" src="img/nosotros.jpg" alt="sobre nosotros">
+            
+        </div>
     </main>
+
+    <section class="contenedor comprar">
+        <h2 class="comprar__titulo">¿Porqué comprar con nosotros?</h2>
+
+        <div class="bloques">
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_1.png" alt="porque comprar">
+                <h3 class="bloque__titulo">El mejor precio</h3>
+                <p>Praesent libero turpis, sagittis nec nisl id, ornare facilisis urna. Sed facilisis venenatis mi, eget mollis mi
+                sagittis sit amet.</p>
+            </div> <!-- .bloque -->
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_2.png" alt="porque comprar">
+                <h3 class="bloque__titulo">Para Devs</h3>
+                <p>Praesent libero turpis, sagittis nec nisl id, ornare facilisis urna. Sed facilisis venenatis mi, eget mollis mi
+                    sagittis sit amet.</p>
+            </div> <!-- .bloque -->
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_3.png" alt="porque comprar">
+                <h3 class="bloque__titulo">Envio Gratis</h3>
+                <p>Praesent libero turpis, sagittis nec nisl id, ornare facilisis urna. Sed facilisis venenatis mi, eget mollis mi
+                    sagittis sit amet.</p>
+            </div> <!-- .bloque -->
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_4.png" alt="porque comprar">
+                <h3 class="bloque__titulo">La Mejor Calidad</h3>
+                <p>Praesent libero turpis, sagittis nec nisl id, ornare facilisis urna. Sed facilisis venenatis mi, eget mollis mi
+                    sagittis sit amet.</p>
+            </div> <!-- .bloque -->
+        </div> <!-- .bloques -->
+    </section>
 
     <footer class="footer">
         <p class="footer__texto">Front End Store - Todos los derechos Reservados 2023.</p>
